[package]
name = "gulf-stream-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
gulf-stream-lib = { path = "../gulf-stream-lib"}
tonic = "0.8.3"