[package]
name = "gulf-stream-lib"
version = "0.1.0"
edition = "2021"



[dependencies]
sha2 = "0.10.6"
hex-literal = "0.3.4"
tonic = "0.8.3"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
ed25519-dalek = "1"
futures = "0.3.27"
rand = {version = "0.7.0", features = ["getrandom"] }

[build-dependencies]
tonic-build = "0.8"
