[package]
name = "gulf-stream-lib"
version = "0.1.0"
edition = "2021"



[dependencies]
sha2 = "0.10.6"
hex-literal = "0.4.1"
tonic = "0.9.2"
prost = "0.11"
ed25519-dalek = "1"
futures = "0.3.27"
rand = {version = "0.7.0", features = ["getrandom"] }
bs58 = "0.4.0"
tonic-web = "0.9.2"
pg-embed = "0.7.1"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls" , "postgres" ] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0.71"
thiserror = "1.0.40"

[build-dependencies]
tonic-build = "0.9.2"
