[package]
name = "gulf-stream-node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] 
name = "gulf-stream-server"
path = "src/server.rs"

[[bin]] 
name = "gulf-stream-client"
path = "src/client.rs"


[dependencies]
serde = {version = "1.0.156", features = ["derive"] }
bincode = "1.3.3"
sha2 = "0.10.6"
hex-literal = "0.4.1"
tonic = "0.9.2"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
gulf-stream-lib = { path = "../gulf-stream-lib"}
clap = { version = "4.1.11", features = ["derive"] }
ed25519-dalek = "1.0.1"
rand = {version = "0.7.0", features = ["getrandom"] }
bs58 = "0.4.0"
anyhow = "1.0.71"
thiserror = "1.0.40"