[package]
name = "node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] 
name = "node"
path = "src/main.rs"


[dependencies]
serde = {version = "1.0.156", features = ["derive"] }
bincode = "1.3.3"
sha2 = "0.10.6"
hex-literal = "0.3.4"
tonic = "0.8.3"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
gulf-stream-lib = { path = "../gulf-stream-lib"}
